--- a/.github/workflows/move-unfinished.yml
+++ b/.github/workflows/move-unfinished.yml
@@ -1,21 +1,20 @@
-name: 🚚 Carry unfinished items forward
-
 on:
   schedule:
-    # runs Monday at 05:00 UTC
-    - cron: '0 5 * * MON'
-  workflow_dispatch:    # enables the “Run workflow” button
+    # Runs "at 05:00, only on Monday" (see https://crontab.guru)
+    - cron: '0 5 * * 1'
 
 jobs:
   move-to-next-iteration:
+    name: Move to next iteration
     runs-on: ubuntu-latest
+
     steps:
-      - uses: blombard/move-to-next-iteration@v0.6.1
-        with:
-          owner:            AmpereEV
-          number:           18
-          token:            ${{ secrets.PROJECT_PAT }}
-          iteration-field:  Iteration
-          iteration:        last
-          new-iteration:    current
-          excluded-statuses: Done
+    - uses: blombard/move-to-next-iteration@master
+      with:
+        owner: OrgName
+        number: 1
+        token: ${{ secrets.PROJECT_PAT }}
+        iteration-field: Iteration
+        iteration: last
+        new-iteration: current
+        statuses: 'Todo,In Progress,In Review'
