--- a/.github/workflows/move-unfinished.yml
+++ b/.github/workflows/move-unfinished.yml
@@ -1,8 +1,12 @@
+name: Move unfinished items to next iteration
+
 on:
   schedule:
     # Runs "at 05:00, only on Monday" (see https://crontab.guru)
     - cron: '0 5 * * 1'
-    
+  push:
+    branches:
+      - main
 
 jobs:
   move-to-next-iteration:
