--- a/.github/workflows/move-unfinished.yml
+++ b/.github/workflows/move-unfinished.yml
@@ -1,25 +1,27 @@
-name: Move unfinished items to next iteration
+# .github/workflows/move-unfinished.yml
+name: 🚚 Carry unfinished cards into Current sprint
 
 on:
+  # Runs every Monday at 05:00 UTC
   schedule:
-    # Runs "at 05:00, only on Monday" (see https://crontab.guru)
-    - cron: '0 5 * * 1'
+    - cron: '0 5 * * MON'
+  # Allows you to click “Run workflow” manually
+  workflow_dispatch:
+  # Also runs on every push to main (handy for testing)
   push:
     branches:
       - main
 
 jobs:
   move-to-next-iteration:
-    name: Move to next iteration
     runs-on: ubuntu-latest
-
     steps:
-    - uses: blombard/move-to-next-iteration@master
-      with:
-        owner: OrgName
-        number: 1
-        token: ${{ secrets.PROJECT_PAT }}
-        iteration-field: Iteration
-        iteration: last
-        new-iteration: current
-        statuses: 'Todo,In Progress,In Review'
+      - uses: blombard/move-to-next-iteration@v0.6.1
+        with:
+          owner:            zahidampere         # your GitHub username/ORG
+          number:           1                   # project ID from /projects/1
+          token:            ${{ secrets.PROJECT_PAT }}
+          iteration-field:  Sprint              # the exact name of your sprint field
+          iteration:        last                # look in the iteration immediately before “Current”
+          new-iteration:    current             # retag into the “Current” iteration
+          excluded-statuses: Done               # skip anything already marked Done
